rewriteRun on ltwa abbreviation classes